--- a/package.json
+++ b/package.json
@@ -22,16 +22,21 @@
     "@openzeppelin/contracts": "4.7.3",
     "@openzeppelin/contracts-upgradeable": "4.7.3",
     "@rainbow-me/rainbowkit": "^0.11.0",
+    "@reduxjs/toolkit": "^1.9.3",
     "@wagmi/cli": "^0.1.10",
     "buffer": "^6.0.3",
+    "daisyui": "^2.51.4",
     "ethers": "^5.7.2",
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.9.0",
     "util": "^0.12.4",
     "wagmi": "^0.11.7"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
     "@vitejs/plugin-react": "^3.1.0",
