--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "wagmi": "wagmi generate"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.10",
     "@eth-optimism/atst": "^0.0.0-20230306200511",
     "@eth-optimism/contracts-bedrock": "^0.12.1",
     "@eth-optimism/contracts-periphery": "^1.0.7",
@@ -27,6 +28,7 @@
     "buffer": "^6.0.3",
     "daisyui": "^2.51.4",
     "ethers": "^5.7.2",
+    "graphql": "^16.6.0",
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
