--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
+    "react-toastify": "^9.1.1",
     "util": "^0.12.4",
     "wagmi": "^0.11.7"
   },
